--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ektagoyal06.github.io/EventCraft",
+  "homepage": "https://harshitaaery.github.io/EventCraft_main/",
   "name": "eventcraft",
   "private": true,
   "version": "0.0.0",
