--- a/package.json
+++ b/package.json
@@ -1,30 +1,20 @@
 {
-  "homepage": "https://harshitaaery.github.io/EventCraft_main/",
-  "name": "eventcraft",
+  "name": "eventcraft-frontend",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "lint": "eslint ."
   },
   "dependencies": {
-    "axion": "^0.1.0",
     "axios": "^1.10.0",
-    "bcryptjs": "^3.0.2",
-    "cors": "^2.8.5",
-    "dotenv": "^17.0.1",
-    "express": "^5.1.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.0",
     "html2canvas": "^1.4.1",
     "ics": "^3.8.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.16.1",
     "react": "^19.1.0",
     "react-calendar": "^6.0.0",
     "react-dom": "^19.1.0",
@@ -40,7 +30,6 @@
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
-    "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
